--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,12 @@
             <version>${aliyun.sdk.oss}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.1.0</version> <!-- 根据实际情况选择最新版本 -->
+        </dependency>
+
     </dependencies>
 
     <build>
