--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
 
 mybatis:
   #mapper配置文件
-  mapper-locations: classpath:mapper/*.xml
+  mapper-locations: classpath*:com.blog.myblog.mapper/*.xml
   type-aliases-package: com.blog.myblog.entity
   configuration:
     #开启驼峰命名
